@@ -66,8 +66,13 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+    [09/2024]    	
+    I gave a talk at <a href="https://neweng.cau.ac.kr/index.do/">CAU</a>, "Vision and Language Representation with LLM for Multimodal Understanding"	
+  </li>
+  <li>
+	<font color=red>*new*</font>
 	[09/2024]
-	<b>Two papers</b> (Summarization and Factual Inconsistency Detection) are accepted to <a href="https://2024.emnlp.org/">EMNLP 2024</a>.
+	<b>Three papers</b> (Summarization and Factual Inconsistency Detection, Document QA) are accepted to <a href="https://2024.emnlp.org/">EMNLP 2024</a>.
   </li>
   <li>
 	<font color=red>*new*</font>
@@ -120,7 +125,8 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
     <br>
   </li>
   <li>
-	<strong><font color=darkblue>Invited Talks: </font></strong> <br>
+	<strong><font color=darkblue>Invited Talks: </font></strong> <be>
+    Vision and Language Representation with LLM for Multimodal Understanding, <strong>Chung-Ang University.</strong>, Sep. 2024<br>
     Robust Textual Representation for Text and Multimodal Understanding, <strong>Dongguk University.</strong>, Mar. 2024<br>
     Learning Text Representation for NLP Application, <strong>Seoul National Univ.</strong>, Aug. 2023<br>
     Pretrained Language Model and Semantic Textual Understanding, <strong>SKKU</strong>, Sep. 2022<br>
