@@ -6,6 +6,11 @@
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+    [09/2024]    	
+    I gave a talk at <a href="https://neweng.cau.ac.kr/index.do/">CAU</a>, "Vision and Language Representation with LLM for Multimodal Understanding"	
+  </li>
+  <li>
+	<font color=red>*new*</font>
 	[09/2024]
 	<b>Three papers</b> (Summarization and Factual Inconsistency Detection, Document QA) are accepted to <a href="https://2024.emnlp.org/">EMNLP 2024</a>.
   </li>
